--- a/test/src/tests/glide.yaml
+++ b/test/src/tests/glide.yaml
@@ -1,11 +1,15 @@
 package: tests
 import:
-- package: gopkg.in/check.v1
 - package: github.com/Azure/go-autorest
+  version: ^8.3.1
   subpackages:
   - autorest
   - autorest/azure
   - autorest/date
+  - autorest/to
   - autorest/validation
 - package: github.com/satori/go.uuid
+  version: ^1.1.0
 - package: github.com/shopspring/decimal
+testImport:
+- package: gopkg.in/check.v1
