--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft.azure/autorest.go",
-  "version": "1.9.2",
+  "version": "2.0.0",
   "description": "The Go extension for classic generators in AutoRest.",
   "scripts": {
     "autorest": "autorest",
@@ -9,6 +9,7 @@
     "testci": "gulp test",
     "build": "gulp build",
     "prepare": "gulp build",
+    "publish-preview": "gulp publish-preview",
     "clean": "gulp clean",
     "nuke": "git clean -xdf"
   },
@@ -29,7 +30,7 @@
   },
   "homepage": "https://github.com/Azure/autorest.go/blob/master/README.md",
   "devDependencies": {
-    "autorest": "^1.9.1",
+    "autorest": "^2.0.0",
     "coffee-script": "^1.11.1",
     "dotnet-sdk-2.0.0": "^1.1.1",
     "gulp": "^3.9.1",
