--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "homepage": "https://github.com/Azure/autorest.go/blob/master/README.md",
   "devDependencies": {
-    "@microsoft.azure/autorest.testserver": "^1.9.0",
-    "autorest": "^2.0.4200",
+    "@microsoft.azure/autorest.testserver": "^2.3.9",
+    "autorest": "^2.0.4203",
     "coffee-script": "^1.11.1",
     "dotnet-sdk-2.0.0": "^1.4.4",
+    "golang-dep": "*",
     "gulp": "^3.9.1",
     "gulp-filter": "^5.0.0",
     "gulp-line-ending-corrector": "^1.0.1",
