Replaced glide with dep for managing test dependencies.
Disabled broken HTTP infrastructure test as it causes a hang.
Fixed broken LRO tests; they were faulty from the beginning but it
wasn't uncovered until moving to a newer go-autorest.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autorest": "^2.0.4220",
     "coffee-script": "^1.11.1",
     "dotnet-sdk-2.0.0": "^1.4.4",
+    "golang-dep": "*",
     "gulp": "^3.9.1",
     "gulp-filter": "^5.0.0",
     "gulp-line-ending-corrector": "^1.0.1",
