--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ go:
   - 1.9.x
   - master
 env:
-  - NODE_VERSION="8.9.4"
+  - NODE_VERSION="8.9.4" DEP_VERSION="0.4.1"
 before_install:
   - nvm install $NODE_VERSION
-  - go get -u github.com/golang/dep/cmd/dep
+  - curl -L -o $GOPATH/bin/dep https://github.com/golang/dep/releases/download/v$DEP_VERSION/dep-linux-amd64 && chmod +x $GOPATH/bin/dep
 install:
   - sudo apt-get install libunwind8
   - npm install
