Add support for deprecation.
The modeler has exposed deprecation settings and messages for types,
methods, and properties.  When true, emit the deprecation message if
available else a default message.

--- a/src/autorest.go.csproj
+++ b/src/autorest.go.csproj
@@ -61,8 +61,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="YamlDotNet.Signed" Version="4.2.1" />
-    <PackageReference Include="autorest.common" Version="2.3.31" />
-    <!-- <ProjectReference Include="../../autorest.common/src/autorest.common.csproj" /> -->
+    <PackageReference Include="Microsoft.AutoRest.Common" Version="2.4.39" />
   </ItemGroup>
 
   <ItemGroup>
