--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: go
 go:
   - 1.8.x
   - 1.9.x
+  - 1.10.x
   - master
+matrix:
+  allow_failures:
+    - go: master
 env:
   - NODE_VERSION="8.9.4" DEP_VERSION="0.4.1"
 before_install:
