--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 matrix:
   allow_failures:
     - go: master
+  fast_finish: true
 env:
   - NODE_VERSION="8.9.4" DEP_VERSION="0.4.1"
 before_install:
@@ -17,4 +18,6 @@ install:
   - npm install
 before_script:
   - npm install -g gulp-cli
-script: gulp testci
+script: 
+  - gulp testci
+  - if [[ $TRAVIS_EVENT_TYPE == "cron" ]]; then sh testSpecs.sh master; fi
