--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ env:
 before_install:
   - nvm install $NODE_VERSION
   - curl -L -o $GOPATH/bin/dep https://github.com/golang/dep/releases/download/v$DEP_VERSION/dep-linux-amd64 && chmod +x $GOPATH/bin/dep
+  - npm install -g autorest
 install:
   - sudo apt-get install libunwind8
   - npm install
-  - npm install autorest
 before_script:
   - npm install -g gulp-cli
 script: 
