--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/Azure/autorest.go/blob/master/README.md",
   "devDependencies": {
     "@microsoft.azure/autorest.testserver": "^2.5.13",
-    "@microsoft.azure/autorest.modeler": "2.3.47",
+    "@microsoft.azure/autorest.modeler": "^2.3.54",
     "autorest": "^2.0.4222",
     "coffee-script": "^1.11.1",
     "dotnet-sdk-2.0.0": "^1.4.4",
