--- a/src/autorest.go.csproj
+++ b/src/autorest.go.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="YamlDotNet.Signed" Version="4.2.1" />
-    <PackageReference Include="Microsoft.AutoRest.Common" Version="2.4.48" />
+    <ProjectReference Include="../autorest.common/src/autorest.common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
