--- a/src/autorest.go.csproj
+++ b/src/autorest.go.csproj
@@ -61,8 +61,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="YamlDotNet.Signed" Version="4.2.1" />
-    <PackageReference Include="autorest.common" Version="2.2.27" />
-    <!-- <ProjectReference Include="../../autorest.common/src/autorest.common.csproj" /> -->
+    <ProjectReference Include="../autorest.common/src/autorest.common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
