--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -10,6 +10,7 @@ pr:
 
 variables:
   NodeVersion: '10.x'
+  goTestPath: '$(system.defaultWorkingDirectory)/test'
 
 jobs:
   - job: 'AutoRest_Go_CI'
@@ -53,14 +54,16 @@ jobs:
           go version
         displayName: 'Install Dependencies'
 
-      - script: go vet $(go list ./test/...)
+      - script: go vet $(go list ./...)
         displayName: 'Vet'
+        workingDirectory: '$(goTestPath)'
 
       - script: |
-          pushd ./src/node_modules/@autorest/test-server
+          pushd ../src/node_modules/@autorest/test-server
           npm start
           popd
-          go test ./test/...
-          pushd ./src/node_modules/@autorest/test-server
+          go test ./...
+          pushd ../src/node_modules/@autorest/test-server
           npm stop
         displayName: 'Run Acceptance Tests'
+        workingDirectory: '$(goTestPath)'
