--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -65,7 +65,7 @@ jobs:
           pushd ../src/node_modules/@autorest/test-server
           npm start
           popd
-          go test ./... 2>&1 | $(GOBIN)/go-junit-report > report.xml
+          go test -v ./... 2>&1 | $(GOBIN)/go-junit-report > report.xml
           pushd ../src/node_modules/@autorest/test-server
           npm stop
         displayName: 'Run Acceptance Tests'
