--- a/src/package.json
+++ b/src/package.json
@@ -53,11 +53,13 @@
     "@typescript-eslint/parser": "~2.6.0",
     "@microsoft.azure/autorest.testserver": "^2.10.9",
     "@autorest/autorest": "~3.0.6118",
-    "eslint": "~6.6.0"
+    "eslint": "~6.6.0",
+    "@azure-tools/codegen": "~2.1.0",
+    "@azure-tools/codemodel": "^3.2.0"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.1.0",
-    "@azure-tools/codemodel": "~3.0.0",
+    "@azure-tools/codemodel": "^3.2.0",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/tasks": "~3.0.0",
