modelerfour clean-up (#282)
* modelerfour clean-up

Recent changes in modelerfour split request parameters into two groups,
one at the operation level and one at the request level; this is to
support operations with multiple requests.  Aggregate parameter groups
into a single array when enumerating request parameters.
Fixed a few minor bugs in formatParamValue().
Skip constants when generating an optional params struct.
Added transformations for enum types.
Fixed the regeneration script to format all generated content, and
commented out test groups that are NYI.

* regenerate autorest tests in CI

fail the step if there are any pending changes

* write autorest/format errors to stderr

* install latest autorest

* pin autorest.testserver version

* remove additionalproperties as there are no tests for it

don't call toLowerCase() on enum value names

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -37,13 +37,19 @@ jobs:
           cd $(Build.SourcesDirectory)
           npm install -g "@microsoft/rush"
           rush update --debug
-          npm install -g "@autorest/autorest"
+          npm install -g autorest
         displayName: 'Prepare Generator Environment'
 
       - script: |
           rush rebuild -v
         displayName: 'Build Generator Sources'
 
+      - script: |
+          rush regenerate
+          git add -A ./test/.
+          git diff --staged -w 1>&2
+        displayName: 'Regenerate Autorest Tests'
+        failOnStderr: true
       - script: |
           set -e
           echo '##vso[task.prependpath]$(GOROOT)/bin'
