Initial support for time formats
This covers scalar time request and response.  Support for time within
structs will be added in a separate change.
Emit internal time helper types when a request and/or response contains
a time type.
Switched header format checks to use DateTimeSchema.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,11 @@
       "changeProcessCWD": true,
       "directory": "./src",
     },
-  ]
+  ],
+  "go.useLanguageServer": true,
+  "go.languageServerExperimentalFeatures": {
+    "format": true,
+    "diagnostics": true,
+    "documentLink": true
+  }
 }
