Fix publishing of autorest test server coverage (#323)
* Fix publishing of autorest test server coverage

Specify the generator version when publishing results as the auto
detection logic for package.json doesn't work when using rush for
package management.  This required updating to the latest autorest
test server which introduced some swagger changes.

* skip coverage publishing for PRs

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -83,7 +83,10 @@ jobs:
           testResultsFiles: $(goTestPath)/report.xml
           failTaskOnFailedTests: true
 
-      - script: |
-          npm run coverage-push -- $(Build.Repository.Name) $(Build.SourceBranch) $(github-token) $(storage-coverage-user) $(storage-coverage-pass)
-        displayName: 'Publish AutoRest Test Server Coverage Report'
-        workingDirectory: src/node_modules/@microsoft.azure/autorest.testserver
+      - ${{if ne(variables['Build.Reason'], 'PullRequest')}}:
+        - pwsh: |
+            $currentVersion = node -p -e "require('./src/package.json').version";
+            $currentVersion="$currentVersion-$(Build.BuildNumber)";
+            cd src/node_modules/@microsoft.azure/autorest.testserver;
+            npm run coverage-push -- $(Build.Repository.Name) $(Build.SourceBranch) $(github-token) $(storage-coverage-user) $(storage-coverage-pass) $currentVersion;
+          displayName: 'Publish AutoRest Test Server Coverage Report'
