--- a/src/package.json
+++ b/src/package.json
@@ -55,11 +55,11 @@
     "@autorest/autorest": "~3.0.6173",
     "eslint": "~6.6.0",
     "@azure-tools/codegen": "~2.4.263",
-    "@azure-tools/codemodel": "^3.7.312"
+    "@azure-tools/codemodel": "~4.13.309"
   },
   "dependencies": {
     "@azure-tools/codegen": "~2.4.263",
-    "@azure-tools/codemodel": "^3.7.312",
+    "@azure-tools/codemodel": "~4.13.309",
     "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/tasks": "~3.0.0",
