--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -94,3 +94,11 @@ jobs:
             cd src/node_modules/@microsoft.azure/autorest.testserver;
             npm run coverage-push -- $(Build.Repository.Name) $(Build.SourceBranch) $(github-token) $(storage-coverage-user) $(storage-coverage-pass) $currentVersion;
           displayName: 'Publish AutoRest Test Server Coverage Report'
+
+      - ${{if ne(variables['Build.Reason'], 'PullRequest')}}:
+        - pwsh: |
+            $currentVersion = node -p -e "require('./src/package.json').version";
+            $currentVersion="$currentVersion-$(Build.BuildNumber)";
+            npm pack;
+            npx publish-release --token $(github-token) --repo autorest.go --owner azure --name "Autorest for Go v$(currentVersion)" --tag v$(currentVersion) --notes='Preview version of Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$(currentVersion).tgz --target_commitish $(Build.SourceBranchName);
+          displayName: 'Publish Dev Release'
