--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -100,6 +100,7 @@ jobs:
             $currentVersion = node -p -e "require('./src/package.json').version";
             $currentVersion="$currentVersion-$(Build.BuildNumber)";
             cd src
+            npm version --no-git-tag-version $currentVersion
             npm pack;
             npx publish-release --token $(github-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Preview version of Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
           displayName: 'Publish Dev Release'
