--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -22,11 +22,9 @@ jobs:
         Linux_Go113:
           vm.image: 'ubuntu-18.04'
           go.version: '1.13'
-          GOROOT: '/usr/local/go$(go.version)'
         Linux_Go114:
           vm.image: 'ubuntu-18.04'
           go.version: '1.14'
-          GOROOT: '/usr/local/go$(go.version)'
 
     pool:
       vmImage: '$(vm.image)'
@@ -54,10 +52,11 @@ jobs:
           git diff --staged -w 1>&2
         displayName: 'Regenerate Autorest Tests'
         failOnStderr: true
-      - script: |
-          set -e
-          echo '##vso[task.prependpath]$(GOROOT)/bin'
-        displayName: 'Create Go Workspace'
+
+      - task: GoTool@0
+        inputs:
+          version: '$(go.version)'
+        displayName: "Select Go Version"
 
       - script: |
           set -e
