Ensure that we do not generate empty enums files

--- a/src/autorest.go.csproj
+++ b/src/autorest.go.csproj
@@ -66,5 +66,8 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <DotnetRazor Remove="Templates\EnumsTemplate.cshtml" />
+  </ItemGroup>
 
 </Project>
