--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -10,6 +10,8 @@ pr:
 
 variables:
   NodeVersion: '10.15.3'
+  GOPATH: '$(system.defaultWorkingDirectory)/work'
+  sdkPath: '$(GOPATH)/src/github.com/$(build.repository.name)'
 
 jobs:
   - job: 'AutoRest_Go_CI'
@@ -20,9 +22,11 @@ jobs:
         Linux_Go113:
           vm.image: 'ubuntu-18.04'
           go.version: '1.13'
+          GOROOT: '/usr/local/go$(go.version)'
         Linux_Go114:
           vm.image: 'ubuntu-18.04'
           go.version: '1.14'
+          GOROOT: '/usr/local/go$(go.version)'
 
     pool:
       vmImage: '$(vm.image)'
@@ -34,15 +38,20 @@ jobs:
           versionSpec: '$(NodeVersion)'
 
       - script: |
+          set -e
+          mkdir -p '$(GOPATH)/bin'
+          mkdir -p '$(sdkPath)'
+          shopt -s extglob
+          mv !(work) '$(sdkPath)'
+          echo '##vso[task.prependpath]$(GOROOT)/bin'
+          echo '##vso[task.prependpath]$(GOPATH)/bin'
+        displayName: 'Create Go Workspace'
+
+      - script: |
           sudo apt-get install libunwind8
           npm install
           npm install -g gulp-cli
         displayName: 'Prepare Generator Environment'
-
-      - task: GoTool@0
-        inputs:
-          version: '$(go.version)'
-        displayName: "Select Go Version"
 
       - script: |
           gulp testci
