--- a/src/package.json
+++ b/src/package.json
@@ -58,13 +58,16 @@
     "@azure-tools/codemodel": "~4.13.347"
   },
   "dependencies": {
+    "@azure-tools/async-io": "~3.0.0",
+    "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/codegen": "~2.5.288",
     "@azure-tools/codemodel": "~4.13.347",
-    "@azure-tools/autorest-extension-base": "~3.1.0",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/tasks": "~3.0.0",
-    "@azure-tools/async-io": "~3.0.0",
-    "source-map-support": "0.5.13",
-    "js-yaml": "3.13.1"
+    "@ts-stack/markdown": "^1.3.0",
+    "@types/html-to-text": "^5.1.2",
+    "html-to-text": "^5.1.1",
+    "js-yaml": "3.13.1",
+    "source-map-support": "0.5.13"
   }
 }
