--- a/src/package.json
+++ b/src/package.json
@@ -66,8 +66,10 @@
     "@azure-tools/tasks": "~3.0.0",
     "@ts-stack/markdown": "^1.3.0",
     "@types/html-to-text": "^5.1.2",
+    "@types/showdown": "^1.9.3",
     "html-to-text": "^5.1.1",
     "js-yaml": "3.13.1",
+    "showdown": "^1.9.1",
     "source-map-support": "0.5.13"
   }
 }
