--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "node"
     ],
     "lib": [
-      "es2018"
+      "es2018", 
+      "dom",
     ],
     "experimentalDecorators": true,
     "newLine": "LF",
