increase script timeout

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -43,8 +43,10 @@ jobs:
           npm install
           npm install gulp
         displayName: 'Prepare Generator Environment'
+        timeoutInMinutes: 20
 
       - script: |
           go version
           gulp testci
         displayName: 'Gulp testci'
+        timeoutInMinutes: 20
