--- a/eng/pipelines/publish-release.yml
+++ b/eng/pipelines/publish-release.yml
@@ -94,11 +94,10 @@ steps:
 
   - pwsh: |
       $currentVersion = node -p -e "require('./src/package.json').version";
-      $currentVersion="$currentVersion-$(Build.BuildNumber)";
       cd src
       npm version --no-git-tag-version $currentVersion
       npm pack;
-      npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Preview version of Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
+      npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
     displayName: 'Publish GitHub Release'
 
   - script: |
