Add npm publishing pipeline (#510)
* Add npm publishing pipeline

* remove build number from public releases

added preview suffix to package.json

* update Go versions

Co-authored-by: Joel Hendrix <jhendrix@microsoft.com>

--- a/eng/pipelines/publish-release.yml
+++ b/eng/pipelines/publish-release.yml
@@ -9,6 +9,10 @@ variables:
 pool:
   vmImage: 'ubuntu-18.04'
 
+variables:
+  NodeVersion: '12.x'
+  TestFolder: '$(Build.SourcesDirectory)/test/'
+
 steps:
   - task: NodeTool@0
     displayName: 'Install Node $(NodeVersion)'
@@ -90,9 +94,13 @@ steps:
 
   - pwsh: |
       $currentVersion = node -p -e "require('./src/package.json').version";
-      $currentVersion="$currentVersion-$(Build.BuildNumber)";
       cd src
       npm version --no-git-tag-version $currentVersion
       npm pack;
-      npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Preview version of Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
-    displayName: 'Publish Dev Release'
+      npx publish-release --token $(package-write-token) --repo autorest.go --owner azure --name "Autorest for Go v$currentVersion" --tag v$currentVersion --notes='Autorest for Go track 2' --prerelease --editRelease false --assets autorest-go-$currentVersion.tgz --target_commitish $(Build.SourceBranchName);
+    displayName: 'Publish GitHub Release'
+
+  - script: |
+      echo "//registry.npmjs.org/:_authToken=$(azure-sdk-npm-token)" > ./.npmrc
+      npm publish --access public
+    displayName: 'Publish to npm'
