output folders and input files to a metadata output folder

--- a/src/autorest.go.csproj
+++ b/src/autorest.go.csproj
@@ -69,5 +69,8 @@
   <ItemGroup>
     <DotnetRazor Remove="Templates\EnumsTemplate.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <DotnetRazor Remove="Templates\MetadataTemplate.cshtml" />
+  </ItemGroup>
 
 </Project>
