Add support to build autorest.go with NodeJS version > 10

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "publish-preview": "gulp publish-preview",
     "regenerate": "gulp regenerate",
     "clean": "gulp clean",
-    "nuke": "git clean -xdf"
+    "nuke": "git clean -xdf",
+    "preinstall": "node preinstall.js"
   },
   "repository": {
     "type": "git",
