--- a/src/package.json
+++ b/src/package.json
@@ -59,7 +59,7 @@
   },
   "dependencies": {
     "@azure-tools/async-io": "~3.0.0",
-    "@azure-tools/autorest-extension-base": "~3.1.0",
+    "@autorest/extension-base": "~3.1.0",
     "@azure-tools/codegen": "~2.5.288",
     "@azure-tools/codemodel": "~4.13.348",
     "@azure-tools/linq": "~3.1.0",
