--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
   "files.eol": "\n",
+  "files.insertFinalNewline": true,
   "files.exclude": {
     "**/common/temp/**": true,
     "**/node_modules/**": true,
