Capture build and vet failures (#598)
* Capture build and vet failures

Some packages were failing to build but didn't fail CI.
Ensure any build/vet failures are propagated.

* replace return with exit

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -67,20 +67,30 @@ jobs:
 
       - pwsh: |
           $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(goTestPath))
+          $exit = 0
           foreach ($md in $modDirs) {
             pushd $md
             Write-Host "##[command]Executing go build -v ./... in $md"
             go build -v ./...
+            if (!$?) {
+              $exit = 1
+            }
           }
+          exit $exit
         displayName: 'Build'
 
       - pwsh: |
           $modDirs = (./eng/scripts/get_module_dirs.ps1 -serviceDir $(goTestPath))
+          $exit = 0
           foreach ($md in $modDirs) {
             pushd $md
             Write-Host "##[command]Executing go vet ./... in $md"
             go vet ./...
+            if (!$?) {
+              $exit = 1
+            }
           }
+          exit $exit
         displayName: 'Vet'
 
       - pwsh: |
