Add jest test infrastructure with 1 test
- Jest configuration stolen with love from autorest core

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,14 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": ".",
-    "types": [
-      "mocha"
-    ]
+    "rootDir": "."
   },
-  "include": [
-    "."
-  ],
   "exclude": [
     "dist",
     "resources",
