--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,7 @@
     "stop-testserver": "./node_modules/.bin/stop-autorest-testserver",
     "watch": "tsc -p . --watch",
     "prepare": "npm run build",
-    "test": "npm run build && mocha dist/test",
+    "test": "jest --ci",
     "clean": "ver > nul 2>&1 nul && npm run --silent clean-cmd || npm run --silent clean-bash",
     "clean-cmd": "if exist dist rmdir /s /q dist && exit 0 || exit 0 ",
     "clean-bash": "rm nul && rm -rf dist && exit 0 || exit 0"
@@ -44,10 +44,7 @@
   "readme": "https://github.com/Azure/autorest.go/blob/track2/readme.md",
   "devDependencies": {
     "@types/js-yaml": "3.12.1",
-    "@types/mocha": "5.2.5",
     "@types/node": "12.7.2",
-    "mocha": "5.2.0",
-    "mocha-typescript": "1.1.17",
     "typescript": "~3.8.0",
     "@typescript-eslint/eslint-plugin": "~2.6.0",
     "@typescript-eslint/parser": "~2.6.0",
@@ -55,7 +52,10 @@
     "@autorest/autorest": "~3.0.6173",
     "eslint": "~6.6.0",
     "@azure-tools/codegen": "~2.5.294",
-    "@autorest/codemodel": "~4.15.0"
+    "@autorest/codemodel": "~4.15.0",
+    "jest": "~27.0.6",
+    "ts-jest": "~27.0.4",
+    "@types/jest": "~26.0.24"
   },
   "dependencies": {
     "@azure-tools/async-io": "~3.0.0",
