--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -128,6 +128,9 @@ jobs:
           popd
         displayName: 'Run Acceptance Tests'
 
+      - script: npm test
+        displayName: 'Run Unit Tests'
+
       - task: PublishTestResults@2
         inputs:
           testRunner: JUnit
