--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,20 @@
 {
     "version": "2.0.0",
     "tasks": [
-      {
-        "label": "Rush Build",
-        "command": "rush",
-        "args": ["build"],
-        "type": "shell",
-        "group": { "kind": "build", "isDefault": true },
-        "problemMatcher": ["$tsc"]
-      }
+        {
+            "label": "Rush Build",
+            "command": "rush",
+            "args": [
+                "build"
+            ],
+            "type": "shell",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+                "$tsc"
+            ]
+        }
     ]
-  }
+}
