--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -128,6 +128,10 @@ jobs:
           popd
         displayName: 'Run Acceptance Tests'
 
+      - pwsh: npm test
+        displayName: 'Run Unit Tests'
+        workingDirectory: $(System.DefaultWorkingDirectory)/src
+
       - task: PublishTestResults@2
         inputs:
           testRunner: JUnit
