--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -1,29 +1,20 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "node",
-      "request": "attach",
-      "name": "Attach",
-      "address": "127.0.0.1",
-      "port": 9229,
-      "smartStep" : true,
-      "skipFiles": ["<node_internals/**/*.js"]
-    },
-    {
-      "type": "node",
-      "protocol": "inspector",
-      "request": "launch",
-      "name": "run tests",
-      "program": "${workspaceRoot}/example/node_modules/mocha/bin/_mocha",
-      "args": [
-        "dist/test/noun-cleaning.js",
-        "--timeout=2000000"
-      ],
-      "cwd": "${workspaceRoot}/example"
-    }
-  ]
+    "version": "1.0.0",
+    "configurations": [
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch via NPM",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [
+                "run-script",
+                "debug"
+            ],
+            "port": 9229,
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "preLaunchTask": "Rush Build"
+        }
+    ]
 }
